# Brc20-Substream-fork

./: Cargo.toml  README.md  brc20-substreams-v0.1.3.spkg  buf.gen.yaml  buf.yaml  build.rs  package-lock.json  package.json  schema.graphql  subgraph.yaml  substreams.yaml
proto/: bitcoin.proto  cap_table.proto
src/: address.rs  btc_utils.rs  lib.rs
src/ord/: envelope.rs  inscription.rs  inscription_id.rs
src/pb/: bitcoin.v1.rs  btc.cap_table.v1.rs  mod.rs
