[package]
name = "brc20"
version = "0.0.1"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
ethabi = "18"
hex-literal = "0.4.1"
num-bigint = "0.4"
num-traits = "0.2.15"
prost = "0.12.6"
prost-types = "0.12.6"
prost-derive = "0.12.6"
substreams = "0.5"
substreams-ethereum = "0.9"
substreams-database-change = "1"
hex = "0.4.3"
bitcoin = "0.32.0"
anyhow = "1"
http = "1.0.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
substreams-entity-change = "1.3.1"
protobuf = "3.5.0"
substreams-macro = "0.5.20"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.9"
regex = "1.8"
prost-build = "0.12.6" 

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"